[package]
name = "desert"
version = "1.0.3"
description = "traits for {de,}serializing compact binary formats"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/substack/desert"
documentation = "https://docs.rs/desert"
keywords = [ "binary", "serialize", "deserialize" ]
authors = [ "substack" ]
edition = "2018"

[dependencies]
failure = "0.1.6"
